syntax = "proto3";
	package eth;
		
	message ProtoTransaction {
        uint64 AccountNonce = 1;
        bytes Price = 2;
        uint64 GasLimit = 3;
        bytes Value = 4;
        bytes Payload = 5;
        bytes Hash = 6;
        uint32 BlockNumber = 7;
        uint64 BlockTime = 8;
        bytes To = 9;
        bytes From = 10;
        uint32 TransactionIndex = 11;
        bytes V = 12;
        bytes R = 13;
        bytes S = 14;
    }